# crewai-research-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
outputs/: 00_manuscript.docx  00_manuscript.md  01_outline.md  02_literature_review.md  03_methodology.md  04_data_analysis.md  05_results_discussion.md  06_edited_manuscript.md  07_references.md  08_ethics_checklist.md  09_peer_review.md  10_submission_checklist.md  11_cover_letter.md
src/research_team/: crew.py  main.py
src/research_team/config/: agents.yaml  tasks.yaml
src/research_team/tools/: export_doc.py
