[project]
name = "research_team"
version = "0.1.0"
description = "research_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1",
    "litellm>=1.80.8",
]

[project.scripts]
research_team = "research_team.main:run"
run_crew = "research_team.main:run"
train = "research_team.main:train"
replay = "research_team.main:replay"
test = "research_team.main:test"
run_with_trigger = "research_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
